--- a/src/assets/sass/animations/_cursor.scss
+++ b/src/assets/sass/animations/_cursor.scss
@@ -3,7 +3,7 @@
   width: 12px;
   border-radius: 24px;
   background-color: black;
-  position: fixed; 
+  position: fixed;
   top: 0;
   left: 0;
   pointer-events: none;
@@ -14,10 +14,10 @@
       height: 20px;
       width: 20px;
     }
-}
+  }
 }
 
 .custom-cursor-container {
-  cursor: none;
+  cursor: pointer !important;
   z-index: 10000000;
 }
