--- a/src/assets/sass/animations/_cursor.scss
+++ b/src/assets/sass/animations/_cursor.scss
@@ -21,3 +21,14 @@
   cursor: none;
   z-index: 10000000;
 }
+
+.custom-cursor-hover {
+  position: fixed;
+  pointer-events: none;
+  z-index: 9999;
+  width: 150px; /* Adjust size as needed */
+  height: 150px; /* Adjust size as needed */
+  background: url('/cursor-4.svg') no-repeat center center;
+  background-size: cover;
+  transform: translate(-50%, -50%); /* Center the cursor image */
+}
