--- a/src/components/AnimatedButton/AnimatedButton.scss
+++ b/src/components/AnimatedButton/AnimatedButton.scss
@@ -61,19 +61,19 @@
 
 @keyframes morph-in-bottom {
   0% {
-    d: path("M 0 0 V 40 Q 100 40 200 40 V 40 H 0 Z");
+    d: path("M 0 40 V 40 Q 100 40 200 100 V 40 Q 100 0 0 40 H 0 Z");
   }
   100% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
+    d: path("M 0 40 V 40 Q 100 40 200 100 V 0 Q 100 0 0 0 H 0 Z");
   }
 }
 
 @keyframes morph-in-left {
   0% {
-    d: path("M 200 40 V 40 Q 200 60 200 40 V 0 H 200 Z");
+    d: path("M 200 0 Q 30 20 40 40 L 200 40 V 0 L 0 0 Z");
   }
   100% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
+    d: path("M 0 0 Q 0 0 0 40 L 200 40 V 0 L 40 0 Z");
   }
 }
 
@@ -98,10 +98,10 @@
 
 @keyframes morph-out-bottom {
   0% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
+    d: path("M 0 40 V 40 Q 100 40 200 100 V 0 Q 140 0 0 0 H 0 Z");
   }
   100% {
-    d: path("M 0 0 V 40 Q 100 40 200 40 V 40 H 0 Z");
+    d: path("M 0 40 V 40 Q 100 40 200 100 V 40 Q 100 70 0 40 H 0 Z");
   }
 }
 
