--- a/src/components/AnimatedButton/AnimatedButton.scss
+++ b/src/components/AnimatedButton/AnimatedButton.scss
@@ -1,12 +1,36 @@
+// Variables de tamaño
+$button-width: 200;
+$button-height: 50;
+$curve-offset: $button-height * 0.8; // Puedes cambiar 0.4
+
 .animated-button {
-  width: 200px;
+  width: #{$button-width}px;
+  height: #{$button-height}px;
   border: 1px solid black;
-  height: 40px;
   overflow: hidden;
   position: relative;
+  border-radius: 100px;
+
+  p {
+    font-family: "gunterz", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black; /* Color original del texto */
+    transition: color 0.3s ease, opacity 0.3s ease; /* Efecto de transición */
+    z-index: 2; /* Asegúrate de que esté por encima del SVG */
+  }
+
+  .text-white {
+    color: white; /* Color del texto al cubrirse */
+    opacity: 1; /* Opción para hacer el texto invisible */
+  }
 
   svg {
-    transition: transform 0.3s ease; /* Transición suave para la rotación */
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s ease;
   }
 
   /* Animaciones de entrada */
@@ -42,83 +66,115 @@
   .animate-out.right #path {
     animation: morph-out-right 0.2s ease-in forwards;
   }
-}
 
-/* Path base */
-#path {
-  fill: currentColor;
-}
+  // Path base
+  #path {
+    fill: black;
+  }
 
-/* Animaciones morph-in (entrada) */
-@keyframes morph-in-top {
-  0% {
-    d: path("M 0 40 V 0 Q 100 0 200 0 V 0 H 0 Z");
+  // Animaciones morph-in (entrada)
+  @keyframes morph-in-top {
+    0% {
+      d: path(
+        "M 0 #{$button-height} V 0 Q #{$button-width / 2} 0 #{$button-width} 0 V 0 H 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width / 2} #{($button-height + $curve-offset)} #{$button-width} #{$button-height} V 0 H 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
-  }
-}
 
-@keyframes morph-in-bottom {
-  0% {
-    d: path("M 0 40 V 40 Q 100 40 200 100 V 40 Q 100 0 0 40 H 0 Z");
+  @keyframes morph-in-bottom {
+    0% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width} #{($button-width * 1.5)} #{$button-width} #{($button-width * 1.5)} V #{$button-height} Q #{$button-width / 2} 0 0 #{$button-height} H 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width} #{($button-width * 1.5)} #{$button-width} #{($button-width * 1.5)} V 0 Q #{$button-width / 2} 0 0 0 H 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 40 V 40 Q 100 40 200 100 V 0 Q 100 0 0 0 H 0 Z");
-  }
-}
 
-@keyframes morph-in-left {
-  0% {
-    d: path("M 200 0 Q 30 20 40 40 L 200 40 V 0 L 0 0 Z");
+  @keyframes morph-in-left {
+    0% {
+      d: path(
+        "M #{$button-width} 0 Q #{($button-width - $curve-offset)} #{($button-height / 2)} #{$button-width} #{$button-height} L #{$button-width} #{$button-height} V 0 L #{($button-width / 5)} 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 0 Q 0 #{($button-height / 2)} 0 #{$button-height} L #{$button-width} #{$button-height} V 0 L #{($button-width / 5)} 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 0 Q 0 0 0 40 L 200 40 V 0 L 40 0 Z");
-  }
-}
 
-@keyframes morph-in-right {
-  0% {
-    d: path("M 0 40 V 40 Q 100 60 0 40 V 0 H 0 Z");
+  @keyframes morph-in-right {
+    0% {
+      d: path(
+        "M 0 0 Q #{$curve-offset} #{($button-height / 2)} 0 #{$button-height} L 0 #{$button-height} V 0 L #{($button-width - $curve-offset)} 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M #{$button-width} 0 Q #{$button-width} #{($button-height / 2)} #{$button-width} #{$button-height} L 0 #{$button-height} V 0 L #{($button-width - $curve-offset)} 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
-  }
-}
 
-/* Animaciones morph-out (salida) */
-@keyframes morph-out-top {
-  0% {
-    d: path("M 0 40 V 40 Q 100 20 200 40 V 0 H 0 Z");
+  // Animaciones morph-out (salida)
+  @keyframes morph-out-top {
+    0% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width / 2} #{$curve-offset} #{$button-width} #{$button-height} V 0 H 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 #{$button-height} V 0 Q #{$button-width / 2} 0 #{$button-width} 0 V 0 H 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 40 V 0 Q 100 0 200 0 V 0 H 0 Z");
-  }
-}
 
-@keyframes morph-out-bottom {
-  0% {
-    d: path("M 0 40 V 40 Q 100 40 200 100 V 0 Q 140 0 0 0 H 0 Z");
+  @keyframes morph-out-bottom {
+    0% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width / 2} #{$button-height} #{$button-width} #{$button-height} V 0 Q 60 0 0 0 H 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 #{$button-height} V #{$button-height} Q #{$button-width / 2} #{$button-height} #{$button-width} #{$button-height} V #{$button-height} Q #{$button-width / 2} #{($button-height + 60)} 0 #{$button-height} H 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 0 40 V 40 Q 100 40 200 100 V 40 Q 100 70 0 40 H 0 Z");
-  }
-}
 
-@keyframes morph-out-left {
-  0% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
+  @keyframes morph-out-left {
+    0% {
+      d: path(
+        "M 0 0 Q #{$curve-offset} #{($button-height / 2)} 0 #{$button-height} L #{$button-width} #{$button-height} V 0 L #{($button-width / 5)} 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M #{$button-width} 0 Q #{$button-width} #{($button-height / 2)} #{$button-width} #{$button-height} L #{$button-width} #{$button-height} V 0 L #{($button-width / 5)} 0 Z"
+      );
+    }
   }
-  100% {
-    d: path("M 200 40 V 40 Q 200 60 200 40 V 0 H 200 Z");
-  }
-}
 
-@keyframes morph-out-right {
-  0% {
-    d: path("M 0 40 V 40 Q 100 60 200 40 V 0 H 0 Z");
-  }
-  100% {
-    d: path("M 0 40 V 40 Q 100 60 0 40 V 0 H 0 Z");
+  @keyframes morph-out-right {
+    0% {
+      d: path(
+        "M #{$button-width - $curve-offset} 0 Q #{($button-width - 2 * $curve-offset)} #{($button-height / 2)} #{$button-width - $curve-offset} #{$button-height} L 0 #{$button-height} V 0 L #{$button-width - $curve-offset} 0 Z"
+      );
+    }
+    100% {
+      d: path(
+        "M 0 0 Q 0 #{($button-height / 2)} 0 #{$button-height} L 0 #{$button-height} V 0 L #{$button-width - $curve-offset} 0 Z"
+      );
+    }
   }
 }
