--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -266,6 +266,10 @@ $font-sizes: (
     flex-wrap: nowrap; // Evitar el wrapping de elementos
   }
 
+  &--auto {
+    flex: auto; 
+  }
+
   // Flex-grow
   @for $i from 0 through 5 {
     &--grow-#{$i} {
@@ -314,12 +318,20 @@ $font-sizes: (
     height: max-content !important;
   }
 
+  &--h-fit {
+    height: fit-content !important;
+  }
+
   &--h-100 {
     height: 100% !important;
   }
 
   &--w-max {
     width: max-content !important;
+  }
+
+  &--w-fit {
+    width: fit-content !important;
   }
 
   &--w-100 {
