--- a/src/assets/sass/animations/_text.scss
+++ b/src/assets/sass/animations/_text.scss
@@ -83,3 +83,7 @@
     letter-spacing: 8px; /* Espacio entre letras */
   }
   
+.text-container{
+    padding-left: 30px;
+    padding-right: 30px;
+}
