--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -37,6 +37,7 @@
 @import "pages/portfolio-details-page/images";
 @import "pages/footer/infinite-carrusel";
 @import "pages/contact-page/contact-page";
+@import "pages/about-page";
 
 // Animaciones
 @import "animations/cursor";
