--- a/src/assets/sass/base/_general.scss
+++ b/src/assets/sass/base/_general.scss
@@ -302,6 +302,10 @@ $font-sizes: (
     height: 100vh !important;
   }
 
+  &--vh-150 {
+    height: 150vh !important;
+  }
+
   &--vh-175 {
     height: 175vh !important;
   }
