--- a/src/assets/sass/pages/_about-page.scss
+++ b/src/assets/sass/pages/_about-page.scss
@@ -10,12 +10,23 @@
 //     object-fit: cover; /* Covers the area without distortion */
 // }
 
+.image-wrapper {
+    position: relative;
+    height: auto;
+
+}
+
 
 .hero-about__title {
     margin: 0px;
     margin-top: 10px;
     font-size: 12vw !important;
     line-height: 12vw;
+    position: absolute;
+    left: 50%;
+    bottom: -130;
+    transform: translate(-50%, 0%);
+    width: 100vw;
 }
 
 
