about hero done

--- a/src/assets/sass/pages/_about-page.scss
+++ b/src/assets/sass/pages/_about-page.scss
@@ -20,12 +20,8 @@
 .hero-about__title {
     margin: 0px;
     margin-top: 10px;
-    font-size: 12vw !important;
+    // font-size: 12vw;
     line-height: 12vw;
-    position: absolute;
-    left: 50%;
-    bottom: -130;
-    transform: translate(-50%, 0%);
     width: 100vw;
 }
 
@@ -126,3 +122,4 @@
     display: block;
     z-index: 10;
 }
+
