--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -36,7 +36,7 @@
 // Pages
 @import "pages/portfolio-details-page/images";
 @import "pages/footer/infinite-carrusel";
-@import "pages/contact-page/contact-page";
+@import "pages/contact-page";
 @import "pages/about-page";
 
 // Animaciones
